# z-workflows

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.sh  zworkflows.restart.plist
src/app/: cli.py  logger.py
src/z_workflows/: bases.py  graph.py
src/z_workflows/app/: cli.py  logger.py
src/z_workflows/ensure_ssh_tunnel/: repo.py
src/z_workflows/ops_collection/: __init__.py
tests/ensure_ssh_tunnel/: test_basic.py
tests/test_app/: test_cli.py
tests/test_z_workflows/: test_graph.py
workflows/check_binks1_hdfs/: __init__.py  workflow.py
workflows/ensure_ssh_tunnel/: __init__.py  workflow.py
workflows/example_workflow/: __init__.py  workflow.py
workflows/example_workflow_one/: workflow.py
workflows/example_workflow_two/: workflow.py
workflows/ops_collection/: __init__.py
