[tool.black]
line-length=79
target-version=["py310"]

[tool.bandit]
skips=["B101"]

[tool.isort]
atomic=true
line_length = 79
lines_after_imports=2
lines_between_types=1
use_parentheses = true
balanced_wrapping = true
include_trailing_comma = true
multi_line_output = 3
known_third_party=[
    "pytest",
    "loguru",
]
known_first_party=[
    "z_workflows",
]

[tool.coverage.run]
branch = false
source = ["z_workflows"]
omit = [
]

[tool.coverage.paths]
source = ["./src/"]

[tool.coverage.report]
fail_under = 100
skip_covered = true
show_missing = true

[tool.mypy]
check_untyped_defs = true
# disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "normal"
follow_imports_for_stubs = true
ignore_missing_imports = false
mypy_path = "./src"
namespace_packages = true
explicit_package_bases = true
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
# warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "conftest",
  "migrations.*",
  "tests.*",
  "*.tests"
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0.0"
addopts = "-vv -s --tb=native"
testpaths = "tests/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "| %(asctime)s | %(name)s | %(levelname)s | %(filename)s | %(message)s"

[tool.poetry]
name = "z-workflows"
version = "1.0"
description = "Bot for helping with keeping work-life balance."
authors = ["Artem Zhukov <iam@zhukovgreen.pro>"]
maintainers = [
    "Artem Zhukov <iam@zhukovgreen.pro>",
]
readme = "README.md"
repository = "https://github.com/zhukovgreen/z-workflows"
packages = [
    {include = "z_workflows", from = "src"},
    {include = "z_workflows/py.typed", from = "src"},
    {include = "workflows"},
    {include = "workflows/py.typed"},
]
keywords = ["bot", "calendar", "time", "management"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Environment :: Web Environment",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Typing :: Typed"
]
[tool.poetry.scripts]
z-workflows = "z_workflows.app.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.3.5"
click = "^8.0.3"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^6.1.2"}
neovim = "^0.3.1"
pdbpp = "^0.10.3"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
pytest-cov = "^3.0.0"
mypy = "^0.931"
black = "^21.12b0"
pre-commit = "^2.16.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
